feat(auth): refresh token into bdd with cookie